--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <article>
         <h2>Bienvenue sur notre site</h2>
-        <p>Alors comme ça il parraît qu'on est déjà expert du CSS? Et bien vas-y, prouve le moi et réalise donc ce site SANS Flexbox, Grid ou un framework!</p>
+        <p1>Alors comme ça il parraît qu'on est déjà expert du CSS? Et bien vas-y, prouve le moi et réalise donc ce site SANS Flexbox, Grid ou un framework!</p1>
         <div class="inside">
           <div class="card">
             <h3>Vive les cookies</h3>
@@ -61,6 +61,7 @@
     </div>
     <div class="hero">
       <h3>Télécharger Discord pour Windows</h3>
+    
     </div>
   </main>
   <footer>
