--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="container1">
       <h1>Discord pour les pros</h1>
       <nav>
         <ul>
@@ -21,7 +21,7 @@
     </div>
   </header>
   <main>
-    <div class="container">
+    <div class="container2">
       <article>
         <h2>Bienvenue sur notre site</h2>
         <p1>Alors comme ça il parraît qu'on est déjà expert du CSS? Et bien vas-y, prouve le moi et réalise donc ce site SANS Flexbox, Grid ou un framework!</p1>
@@ -60,12 +60,12 @@
       </aside>
     </div>
     <div class="hero">
-      <h3>Télécharger Discord pour Windows</h3>
+      <h4>Télécharger Discord pour Windows</h4>
     
     </div>
   </main>
   <footer>
-    <div class="container">
+    <div class="container3">
       <p>&copy; 2024 Discord pour les pros. Tous droits réservés.</p>
     </div>
   </footer>
